--- a/app/src/main/res/layout/activity_deal.xml
+++ b/app/src/main/res/layout/activity_deal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -49,12 +49,16 @@
 
     <Button
         android:id="@+id/btnImage"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/text_margin_standard"
-        android:layout_marginStart="@dimen/text_margin_standard"
-        android:layout_marginEnd="@dimen/text_margin_standard"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/shape"
+        android:textColor="@android:color/white"
+
         android:text="Upload Image"
+        android:drawableLeft="@drawable/baseline_add_photo_alternate_white_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
@@ -71,4 +75,4 @@
         app:srcCompat="@android:drawable/screen_background_light_transparent"
         app:layout_constraintTop_toBottomOf="@+id/btnImage"
          />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
